syntax = "proto3";

option csharp_namespace = "TaskManager";
package connection;


service GrpcConnectionManager {
  rpc Get (stream RequestMgs) returns (stream ReplyMsg);
  rpc Kill (KillRequest) returns (KillResponse);
  rpc Modify (ModifyRequest) returns (ModifyResponse);
  rpc Start (StartRequest) returns (StartResponse);

  rpc AddForbidden (ForbidRequest) returns (ForbidResponse);
  rpc RemoveForbidden (ForbidRequest) returns (ForbidResponse);
  rpc GetForbiddenNames (ForbidRequest) returns (ForbiddenList);
}


// Get processes
message RequestMgs {
  string message = 1; // start, change frequency, end 
}

message ProcessInformation{
  int32 id = 1;
  string name = 2;
  int32 affinity = 3;
  string priority = 4;
  int64 memory = 5;
  string path = 6;
}

message ReplyMsg {
  repeated ProcessInformation ProcessesList = 1;
}


message ForbidRequest {
  string message = 1;
}
message ForbidResponse {
  string message = 1;
}

message ForbiddenList{
  repeated string names = 1;
}


message ProcessStatus {
  int32 id = 1;
  string status = 2; // "Ok" or error
}


// send array of PIDs to delete
message KillRequest {
  repeated int32 processId = 1;
}
message KillResponse {
  repeated ProcessStatus results = 1;
}



message Modification{
  int32 id = 1;
  string name = 2;
  int32 affinity = 3;
  string priority = 4;
}
message ModifyRequest {
  repeated Modification modifications = 1;
}
message ModifyResponse {
  repeated ProcessStatus results = 1;
}


message StartupInformation{
  int32 RequestId = 1;
  string name = 2;
  string arguments = 3;
  int32 affinity = 4;
  string priority = 5;
}

message StartRequest {
  repeated StartupInformation StartupRequests = 1;
}
message StartResponse {
  // 'id' here is a RequestId
  repeated ProcessStatus results = 1;
}
